--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "org.tensorflow.lite.examples.imageclassification"
+        applicationId "com.project.currency.scanner.imageclassification"
         minSdk 23
         targetSdk 32
         versionCode 1
@@ -43,7 +43,7 @@ android {
     androidResources {
         noCompress 'tflite'
     }
-    namespace 'org.tensorflow.lite.examples.imageclassification'
+    namespace 'com.project.currency.scanner.imageclassification'
 }
 
 // import DownloadModels task
