--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "TFLite Image Classification"
+rootProject.name = "Currency Scanner"
 include ':app'
